singup and login frontend

--- a/foodOrdering/src/components/navbar/Navbar.css
+++ b/foodOrdering/src/components/navbar/Navbar.css
@@ -19,6 +19,11 @@
   font-family: sans-serif;
 }
 
+.navbar a {
+  color: inherit;
+  text-decoration: none;
+}
+
 /* Inner content container */
 .nav-container {
   height: 60px;
